frontend/test/should_fail/error_message_on_missing_separator_lhs.grg
test t : (Node)
{
	x:Node --> x;
	
	def var i:int = 42;
	yield {
		yield i = i + 1;
	}
	
	return(x);
}